# Scraper-Lib

./: .buildinfo  .bumpversion.cfg  .gitignore  CustomLogger.py  README.md  changelog.html  contributing.html  example 2.py  example.py  example2.py  features.html  genindex.html  loggin.py  main.py  package.py  pyproject.toml  scraper_lib.py  search.html  searchindex.js  state.py  usage.html
.doctrees/: changelog.doctree  cli.doctree  contributing.doctree  environment.pickle  features.doctree  getting_started.doctree  index.doctree  usage.doctree
.doctrees/api/: ScraperLib.doctree  customlogger.doctree  downloadstate.doctree  index.doctree
.github/workflows/: ci-cd.yml  deploy-docs.yml  release.yml
_modules/src/: CustomLogger.html  DownloadState.html
_sources/: features.rst.txt  usage.rst.txt
_sources/api/: ScraperLib.rst.txt  index.rst.txt
api/: customlogger.html  index.html  scraper_lib.html
docs/: changelog.rst  cli.rst  conf.py  contributing.rst  features.rst  getting_started.rst  index.rst  usage.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  cli.html  contributing.html  getting_started.html  index.html  objects.inv  py-modindex.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: changelog.doctree  cli.doctree  contributing.doctree  environment.pickle  features.doctree  (+3 more)
docs/api/: customlogger.rst  downloadstate.rst  index.rst  scraper_lib.rst
src/: CustomLogger.py  DownloadState.py  ScraperLib.py  __init__.py  example.py  scraper_lib.py  state.py
tests/: test_customlogger.py  test_downloadstate.py  test_scraperlib.py
(+15 files in other folders)
