[project]
name = "taxi-extraction-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "filelock>=3.18.0",
    "matplotlib>=3.10.1",
    "portalocker>=3.1.1",
    "prettyprint>=0.1.5",
    "ray>=2.44.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
]
