[project]
name = "Scraper-Lib-RMP"
version = "0.2.295"
description = "Add your description here"
readme = "README.md"
authors = [{ name="Rodrigo Monteiro Pereira", email="rmonteiropereira1@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "filelock>=3.18.0",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "myst-parser>=4.0.1",
    "portalocker>=3.1.1",
    "prettyprint>=0.1.5",
    "ray>=2.44.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "ruff>=0.11.6",
    "tqdm>=4.67.1",
    "virtualenv>=20.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
docs = [
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.2.3",
    "sphinx-argparse>=0.5.2",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"